# heat-equation

./: .gitignore  README.md
2d/cpp/: Makefile  core.cpp  heat.cpp  main.cpp  parallel.cpp  setup.cpp  utilities.cpp
2d/cuda/: Makefile  io.cpp  setup.cpp
2d/cuda/fortran/: Makefile  core.F90  main.F90  setup.F90  utilities.F90
2d/hip/: Makefile  core.cpp  core_hip.cpp  heat.h  main.cpp  setup.cpp
2d/kokkos/: Makefile  core.cpp  heat.cpp  heat.hpp  io.cpp  main.cpp  parallel.cpp  setup.cpp  utilities.cpp
2d/mpi/: Makefile  core.cpp  heat.h  main.cpp  setup.cpp  utilities.cpp
2d/mpi-openmp/: Makefile  core.cpp  main.cpp  setup.cpp  utilities.cpp
2d/mpi-openmp/fortran/: Makefile  core.F90  heat_mod.F90  main.F90  setup.F90  utilities.F90
2d/mpi/fortran/: Makefile  core.F90  io.F90  main.F90  utilities.F90
2d/openacc/: Makefile  core.cpp  heat.h  main.cpp  setup.cpp  utilities.cpp
2d/openacc/fortran/: Makefile  core.F90  heat_mod.F90  io.F90  main.F90  utilities.F90
2d/openmp-offload/: Makefile  core.cpp  main.cpp  setup.cpp
2d/openmp-offload/fortran/: Makefile  core.F90  heat_mod.F90  io.F90  pngwriter_mod.F90  utilities.F90
2d/serial/: Makefile  core.cpp  heat.h  io.cpp  main.cpp  setup.cpp  utilities.cpp
2d/serial/fortran/: Makefile  core.F90  heat_mod.F90  io.F90  main.F90  setup.F90  utilities.F90
3d/cpp/: Makefile  heat.cpp  heat.hpp  io.cpp  main.cpp  setup.cpp  utilities.cpp
3d/cuda/: Makefile  core.cpp  core_cuda.cu  error_checks.h  functions.hpp  heat.cpp  heat.hpp  main.cpp  matrix.hpp  parallel.hpp  setup.cpp
3d/hip/: Makefile  core.cpp  core_hip.cpp  error_checks.h  functions.hpp  heat.cpp  heat.hpp  io.cpp  main.cpp  matrix.hpp  parallel.hpp  setup.cpp
3d/hipfort/: Makefile  Makefile.hipfort  core.F90  heat_hipfort  heat_mod.F90  install_hipfort.sh  io.F90  kernel.cpp  launcher.sh  main.F90  setup.F90  utilities.F90
3d/kokkos/: .uprof-pcm-mem.txt.swp  Makefile  core.cpp  functions.hpp  heat.cpp  heat.hpp  io.cpp  main.cpp  parallel.hpp  setup.cpp  utilities.cpp
3d/mpi/: Makefile  core.cpp  heat.cpp  heat.hpp  io.cpp  main.cpp  mat_test.cpp  parallel.hpp  setup.cpp
3d/mpi-openmp/: Makefile  core.cpp  heat.cpp  heat.hpp  io.cpp  main.cpp  matrix.hpp  parallel.hpp  setup.cpp
3d/mpi-openmp/fortran/: Makefile  core.F90  heat_mod.F90  main.F90  setup.F90
3d/openacc-hip/fortran/: Makefile  core.F90  core_hip.cpp  heat_mod.F90  utilities.F90
3d/openacc/fortran/: Makefile  core.F90  heat_mod.F90  io.F90  main.F90  mo_roctx.F90  setup.F90
3d/openmp-offload/: Makefile  core.cpp  functions.hpp  heat.cpp  heat.hpp  io.cpp  main.cpp  parallel.hpp  setup.cpp  utilities.cpp
3d/openmp-offload/fortran/: Makefile  core.F90  heat_mod.F90  io.F90  main.F90  utilities.F90
common/: pngwriter.c  pngwriter.h
cpp/: Makefile  core.cpp  heat.cpp  heat.hpp  io.cpp  main.cpp  setup.cpp  utilities.cpp
cpp-3d/: Makefile  core.cpp  heat.cpp  heat.hpp  io.cpp  main.cpp  matrix.hpp  setup.cpp
ctest-gtest/: .gitignore  CMakeLists.txt  Makefile  build.sh  todo.md
ctest-gtest/src/: CMakeLists.txt  constants.hpp  core.cpp  core.hpp  field.cpp  field.hpp  heat.cpp  heat.hpp  input.cpp  input.hpp  io.cpp  io.hpp  lib.cpp  main.cpp  matrix.hpp  parallel.cpp  parallel.hpp  setup.cpp  setup.hpp  utilities.cpp  utilities.hpp
ctest-gtest/tests/: CMakeLists.txt  field_tests.cpp  integration_tests.cpp  matrix_tests.cpp  stencil_tests.cpp  test.cpp  utilities_tests.cpp
ctest-gtest/tests/integration_tests/: CMakeLists.txt  integration_tests.cpp  io_tests.cpp  utilities_tests.cpp
ctest-gtest/tests/mpi_tests/: CMakeLists.txt  core_tests.cpp  full_run_tests.cpp  mpi_test_environment.hpp  utilities_tests.cpp
ctest-gtest/tests/testdata/: input.json
ctest-gtest/tests/unit_tests/: CMakeLists.txt  field_tests.cpp  utilities_tests.cpp
cuda/: Makefile  core_cuda.cu
cuda/fortran/: Makefile
hip/: Makefile  core_hip.cpp
images/: heat_equation.png.license
kokkos/: Makefile  core.cpp  core_functor.cpp  core_lambda.cpp  heat.cpp  heat.hpp  main.cpp  mat_test.cpp  parallel.cpp  setup.cpp  utilities.cpp
mpi/: Makefile  setup.cpp
mpi-openmp/: Makefile  core.cpp  setup.cpp
mpi-openmp/fortran/: Makefile  main.F90  setup.F90
mpi/fortran/: Makefile
openacc/: Makefile  setup.cpp
openacc/fortran/: Makefile  core.F90  heat_mod.F90  main.F90
openmp-offload/: Makefile  core.cpp  setup.cpp
openmp-offload/fortran/: Makefile  heat_mod.F90  io.F90
serial/: Makefile  core.cpp  io.cpp  main.cpp  utilities.cpp
serial/fortran/: Makefile
